--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <span class="hero__titre"> id="text_accueil"></span>
+          <span class="accueil__titre" id="text_accueil"></span>
           <h2> <span class="sous__titre" data-typed-items="
             Je suis un développeur Full Stack, 
             Doué à la création des applications Web et Mobile,
