--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             </div>
         </div>
         <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-          <form action="#" method="post" class="formulaire">
+          <form action="https://formcarry.com/s/GmXR47Uc0EA" method="post" class="formulaire" accept-charset="UTF-8">
             <div class="row">
               <div class="form-group col-md-6">
                 <label for="name">Nom</label>
